# Compassionate-Algorithm-for-Learning-Insights

./: .gitignore  .replit  LICENSE  README.md  alert_system.py  app.py  config.yaml  data_processor.py  database.py  landing.py  logger.py  model_trainer.py  models.py  notification_helper.py  pyproject.toml  retrain.py  student_behavior.db  utils.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: add_alert_tables.py  add_environmental_factors.py  add_medication_tables.py  initial_migration.py
attached_assets/: CALITestPandas.xlsx - Applied Behavior Analysis.csv
tests/: test_data_processor.py  test_model_trainer.py
